--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 # Site wide configuration
 
-title:            Site Title
+title:            Jesse's World
 locale:           en_US
 logo:             # filename of a logo image that has been placed into your images directory 
 # If using a Github User page (i.e. username.github.io) to host your site, delete the default url that is below.
 url:
 # Enter the following platform usernames if you would like for them to appear on your site.
 owner:
-  name: Your Name
+  name: Jesse Alexander Lopez
   avatar: bio-photo.jpg
-  bio: "A brief description of yourself."
-  email: #emailaddress
+  bio: "Current NCSU Libraries Fellow. USMC Veteran. Californian."
+  email: #jalopez2@ncsu.edu
   twitter: #username
   facebook: #username
   instagram: #username
