--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ owner:
   name: "Jesse Alexander Lopez"
   avatar: bio-photo.jpg
   bio: "Current NCSU Libraries Fellow. USMC Veteran. Californian."
-  email: jalopez2@ncsu.edu
+  email: "jalopez2@ncsu.edu"
   twitter: #username
   facebook: #username
   instagram: #username
